--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -1,3 +1,6 @@
 {
-    "helloWorld": "¡Hola Mundo!"
+    "email": "Correo electrónico",
+    "password": "Contraseña",
+    "login": "Iniciar sesión",
+    "register": "Registrese"
 }
