Se mejora la validación de textos y se agrega la validación sintáctica de correos

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -38,5 +38,9 @@
   "fieldRequired": "Required field",
   "@mobilePhoneNumber": {
     "description": "Message for an empty required field"
+  },
+  "invalidEmail": "Email is not valid",
+  "@invalidEmail": {
+    "description": "Message for an invalid email field"
   }
 }
