Se agregan mensajes de resultado de inicio de sesión

--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -9,5 +9,9 @@
     "idDocumentNumber": "Número de documento de identidad",
     "mobilePhoneNumber": "Número de celular",
     "fieldRequired": "El campo es obligatorio",
-    "invalidEmail": "El correo electrónico no es válido"
+    "invalidEmail": "El correo electrónico no es válido",
+    "serviceResponseError": "Error en la respuesta del servidor",
+    "serviceResponseNotFound": "No se encontró el registro",
+    "loginOkMessage": "Sesión iniciada correctamente",
+    "loginErrorMessage": "Correo electrónico o contraseña inválidos"
 }
